--- a/.github/workflows/build_publish_openelis.yml
+++ b/.github/workflows/build_publish_openelis.yml
@@ -1,4 +1,5 @@
 name: Build and Publish OpenELIS
+
 on:
   push:
     branches:
@@ -19,51 +20,84 @@ jobs:
   docker-build-publish:
     name: Build & Publish OpenELIS Docker Image
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+
+      # --- Setup requirements ---
       - name: Setup Java 7 for ant
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v4
         with:
           distribution: 'zulu'
           java-version: '7'
+
       - name: Setup Ruby 3.1
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: 3.1
+
       - name: Install Compass
-        run: gem install ffi -v 1.17.0 && gem install compass
+        run: |
+          gem install ffi -v 1.17.0
+          gem install compass
+
       - name: Install Ant 1.9
         run: |
           mkdir /tmp/ant
           cd /tmp/ant
-          wget https://dlcdn.apache.org//ant/binaries/apache-ant-1.9.16-bin.tar.gz
+          wget https://dlcdn.apache.org/ant/binaries/apache-ant-1.9.16-bin.tar.gz
           tar -zxf apache-ant-1.9.16-bin.tar.gz
           echo "ANT_HOME=/tmp/ant/apache-ant-1.9.16" >> $GITHUB_ENV
           echo "/tmp/ant/apache-ant-1.9.16/bin" >> $GITHUB_PATH
+
       - name: Set env.ARTIFACT_VERSION
         run: |
-          wget -q https://raw.githubusercontent.com/Bahmni/bahmni-infra-utils/main/setArtifactVersion.sh && chmod +x setArtifactVersion.sh
+          wget -q https://raw.githubusercontent.com/Bahmni/bahmni-infra-utils/main/setArtifactVersion.sh
+          chmod +x setArtifactVersion.sh
           ./setArtifactVersion.sh
           rm setArtifactVersion.sh
-      - name: Package
+
+      # --- Build the OpenELIS artifact ---
+      - name: Package (ant dist)
         run: ant dist
+
+      # --- Move OpenElis.zip into Docker build context root ---
+      - name: Move OpenElis.zip to root of build context
+        run: |
+          echo "Searching for OpenElis.zip..."
+          find . -name "OpenElis.zip" -exec cp {} ./OpenElis.zip \;
+          ls -lh OpenElis.zip
+
+      # (Optional) Debug - ensure WAR exists
+      - name: Debug: list build output
+        run: find . -maxdepth 4 -type f | sort
+
+      # --- Docker buildx setup ---
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
+        uses: docker/setup-qemu-action@v3
+
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
+
       - name: Login to DockerHub
-        uses: docker/login-action@v2 
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_TOKEN }}
+
+      # --- Build & push multiarch Docker image ---
       - name: Docker Build and push
-        uses: docker/build-push-action@v3
+        uses: docker/build-push-action@v6
         with:
           context: .
           platforms: linux/amd64,linux/arm64
           file: package/docker/openelis/Dockerfile
           push: true
-          tags: utsavd/openelis:${{env.ARTIFACT_VERSION}},utsavd/openelis:latest
+          tags: |
+            utsavd/openelis:${{ env.ARTIFACT_VERSION }}
+            utsavd/openelis:latest
+
+      # --- Push translations ---
       - name: Push Translations to Transifex
         run: |
           curl -o transifex.sh https://raw.githubusercontent.com/Bahmni/bahmni-infra-utils/main/transifex.sh
