--- a/.github/workflows/build_publish_openelis.yml
+++ b/.github/workflows/build_publish_openelis.yml
@@ -1,9 +1,8 @@
 name: Build and Publish OpenELIS
-
 on:
   push:
     branches:
-      - main
+      - master
       - 'release-*'
     tags:
       - '[0-9]+.[0-9]+.[0-9]+'
@@ -13,91 +12,58 @@ on:
     workflows: [Pull Translations from Transifex]
     types: [completed]
     branches:
-      - main
+      - master
       - 'release-*'
 
 jobs:
   docker-build-publish:
     name: Build & Publish OpenELIS Docker Image
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v3
-
+      - uses: actions/checkout@v2
       - name: Setup Java 7 for ant
-        uses: actions/setup-java@v4
+        uses: actions/setup-java@v2
         with:
-          distribution: zulu
-          java-version: 7
-
+          distribution: 'zulu'
+          java-version: '7'
       - name: Setup Ruby 3.1
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: 3.1
-
       - name: Install Compass
-        run: |
-          gem install ffi -v 1.17.0
-          gem install compass
-
+        run: gem install ffi -v 1.17.0 && gem install compass
       - name: Install Ant 1.9
         run: |
           mkdir /tmp/ant
           cd /tmp/ant
-          wget https://dlcdn.apache.org/ant/binaries/apache-ant-1.9.16-bin.tar.gz
+          wget https://dlcdn.apache.org//ant/binaries/apache-ant-1.9.16-bin.tar.gz
           tar -zxf apache-ant-1.9.16-bin.tar.gz
           echo "ANT_HOME=/tmp/ant/apache-ant-1.9.16" >> $GITHUB_ENV
           echo "/tmp/ant/apache-ant-1.9.16/bin" >> $GITHUB_PATH
-
       - name: Set env.ARTIFACT_VERSION
         run: |
-          wget -q https://raw.githubusercontent.com/Bahmni/bahmni-infra-utils/main/setArtifactVersion.sh
-          chmod +x setArtifactVersion.sh
+          wget -q https://raw.githubusercontent.com/Bahmni/bahmni-infra-utils/main/setArtifactVersion.sh && chmod +x setArtifactVersion.sh
           ./setArtifactVersion.sh
           rm setArtifactVersion.sh
-
-      - name: Package OpenELIS WAR
+      - name: Package
         run: ant dist
-
-      - name: Debug build output
-        run: |
-          echo "=== Searching for WAR files ==="
-          find . -type f \( -iname "*openelis*" -o -iname "*.war" \) -print | sort
-
-      - name: Generate OpenElis.zip
-        run: |
-          echo "Creating OpenElis.zip from migration folders..."
-          mkdir -p tmp_artifacts/OpenElis
-          #cp -r package/docker/openelis/db_backup tmp_artifacts/OpenElis/db_backup
-          cp -r package/docker/openelis/liquibase tmp_artifacts/OpenElis/liquibase
-          cp -r package/docker/openelis/scripts tmp_artifacts/OpenElis/scripts
-          cd tmp_artifacts
-          zip -r OpenElis.zip OpenElis
-          mv OpenElis.zip ../OpenElis.zip
-          cd ..
-          ls -lh OpenElis.zip
-
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
+        uses: docker/setup-qemu-action@v2
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
+        uses: docker/setup-buildx-action@v2
       - name: Login to DockerHub
-        uses: docker/login-action@v3
+        uses: docker/login-action@v2 
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_TOKEN }}
-
       - name: Docker Build and push
-        uses: docker/build-push-action@v6
+        uses: docker/build-push-action@v3
         with:
           context: .
           platforms: linux/amd64,linux/arm64
           file: package/docker/openelis/Dockerfile
           push: true
-          tags: utsavd/openelis:${{env.ARTIFACT_VERSION}},utsavd/openelis:latest
-
+          tags: bahmni/openelis:${{env.ARTIFACT_VERSION}},bahmni/openelis:latest
       - name: Push Translations to Transifex
         run: |
           curl -o transifex.sh https://raw.githubusercontent.com/Bahmni/bahmni-infra-utils/main/transifex.sh
